Added List.of() where required